--- a/spring-study-ioc/pom.xml
+++ b/spring-study-ioc/pom.xml
@@ -6,18 +6,29 @@
         <artifactId>spring-study</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
     <artifactId>spring-study-ioc</artifactId>
     <packaging>war</packaging>
+
     <name>spring-study-ioc Maven Webapp</name>
-    <url>http://maven.apache.org</url>
+
+    <properties>
+    </properties>
+
     <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <finalName>spring-study-ioc</finalName>
     </build>
